AfricaApp: create africa app sticker

--- a/swift/Africa/Africa.xcodeproj/xcshareddata/xcschemes/Africa.xcscheme
+++ b/swift/Africa/Africa.xcodeproj/xcshareddata/xcschemes/Africa.xcscheme
@@ -28,6 +28,30 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DC7619302B08A4D60064AC5E"
+               BuildableName = "AfricaTests.xctest"
+               BlueprintName = "AfricaTests"
+               ReferencedContainer = "container:Africa.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DC76193A2B08A4D60064AC5E"
+               BuildableName = "AfricaUITests.xctest"
+               BlueprintName = "AfricaUITests"
+               ReferencedContainer = "container:Africa.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
